"Fixed counter not showing straight away after try again"

--- a/src/sass/global/_components.scss
+++ b/src/sass/global/_components.scss
@@ -70,7 +70,6 @@
   }
 
   &__hidden {
-    transition: opacity 0.5s ease-out;
     opacity: 0;
   }
 }
